--- a/ex2.html
+++ b/ex2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>第一個標題</title>
+        <title>個人簡介</title>
         <style>
             th{background-color:blue;color:white;font-size:}
         </style>
