--- a/02-css/bootstrap/ex5.html
+++ b/02-css/bootstrap/ex5.html
@@ -65,25 +65,52 @@
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div class="container">
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="https://github.com/ayd0122344/wd107b/blob/master/img/aboutme.jpg?raw=true" class="img-fluid" alt="Responsive image">
     <h1 class="mt-5">個人簡介</h1>
-    <p class="lead"><table border="1">
-      <tr>
-          <th>欄位</th>
-          <th>內容</th>
-      </tr>
-      <tr>
-              <td>姓名</td>
-              <td>徐熙堯</td>
-      <tr>
-          <td>職務</td>
-          <td>金門大學資工系學生</td>
-      </tr>
-      <tr>
-              <td>網站</td>
-              <td><a href="https://www.instagram.com/myosotis_yao/">個人網站</a></td>
-      </tr>
-  </table></p>
-  
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">職業</th>
+          <th scope="col">性別</th>
+          <th scope="col">星座</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>學生</td>
+          <td>女</td>
+          <td>天蠍座</td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <br>
+    <br>
+    <br>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">喜歡的天氣</th>
+            <th scope="col">喜歡的顏色</th>
+            <th scope="col">喜歡的食物</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>晴天</td>
+            <td>白色</td>
+            <td>巧克力</td>
+          </tr>
+        </tbody>
+      </table>
   </div>
 </main>
 
