--- a/02-css/響應式網頁/ex6.html
+++ b/02-css/響應式網頁/ex6.html
@@ -8,6 +8,8 @@
 
 .content{
     text-align: center;
+    color: rgb(119, 0, 255);
+    background-color: #ffffff;
 }
 body {
   margin: 0px; 
@@ -35,7 +37,7 @@ body {
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding:14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -46,7 +48,7 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #f8f5db;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -98,15 +100,27 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+img
+{
+  border:5px dotted  rgb(185, 103, 233);
+  opacity:0.4;
+  filter:alpha(opacity=40);
+}
+img:hover
+{
+  opacity:1.0;
+  filter:alpha(opacity=100);
+}
 </style>
 </head>
 <body>
 <div class="sidebar">
  <ul>
+  <p><b>．個人網站</b></p>
  <li><a href="#"><a href="https://www.facebook.com/a.yao.752">．Facebook</a></li>
  <li><a href="#"><a href="https://www.instagram.com/myosotis_yao/">．Instergram</a></li>
  <li><a href="#"><a href="https://ayd0122344.github.io/wd107b/01-html/ex3.html">．表單</a></li>
- <li><a href="#"><a href="https://ayd0122344.github.io/wd107b/02-css/01-內套用CSS/ex4.html/">．個人履歷</a></li>
+ <li><a href="#"><a href="https://ayd0122344.github.io/wd107b/02-css/01-%E5%85%A7%E5%A5%97%E7%94%A8CSS/ex4.html">．個人履歷</a></li>
  </ul>
 </div>
 <div class="navbar">
@@ -116,22 +130,28 @@ body {
   <a href="#news">★</a>  <a href="#home">☆</a>
   <a href="#news">★</a>
   <div class="dropdown">
-  <button class="dropbtn" onclick="myFunction()">♥♥♥
+  <button class="dropbtn" onclick="myFunction()">♥ ♥ ♥ ♥ ♥ ♥ 
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
-    <a href="#">( ˘•ω•˘ )</a>
-    <a href="#">(´・ω・`) </a>
+    <a href="#">If you can dream it, </a>
+    <a href="#">you can do it.</a>
     <a href="#"> ( • ̀ω•́ )✧</a>
   </div>
   </div> 
 </div>
 
 <div class="content">
-<h1>徐熙堯</h1>
+<h1>–Birdcage–</h1>
 <h4>試問，願成為囚鳥，抑或翱翔於天際？</h4>
+<hr>
+<p>潘朵拉的盒子無法桎梏希望。<br>
+
+  希望只存在於人的靈魂之中，
+  
+  唯有人們選擇拋棄之時，希望才會泯滅。
+</p><br>
 <p><img src="https://scontent.fkhh1-2.fna.fbcdn.net/v/t1.0-9/56423394_2362286020462230_8931774698400776192_n.jpg?_nc_cat=107&_nc_ht=scontent.fkhh1-2.fna&oh=d1860e88b676bb65efcd7e5a49746342&oe=5D38B4B6" /></p>
 </div>
-
 </body>
 </html>
